--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             alert("تم الإرسال: " + message);
         }
 
-        const url = 'http://localhost:3004';
+        const url = 'https://ui-conntroller.vercel.app';
 
         const send = async () => {
             const inputMessage = document.getElementById('message').value;
